{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "29d37ea6-b1de-416e-99e9-f0f41911a32b",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "217a7489-9d9c-46f1-8509-0cf859a77ee2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "c76096ba-9cb6-4e9b-a84a-af182c5f6309",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "3091a730-7641-489c-93e3-baa312399644",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "c27ed4c9-a33c-41ca-ae54-4b597a2ce75d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "edbdb841-f466-4085-babe-34c26c71e61a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "afb9ce4c-c20d-472d-be85-b4eb4fa93594",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6e92ee8-125e-46e4-b65e-faa4a31fa506",
                    "path": "<HID::Twin USB Gamepad      >/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41482394-ec48-4b4e-b057-7bca4da10240",
                    "path": "<HID::Twin USB Gamepad      >/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "599e2644-b8b2-4d48-9d37-20c70a0a3bac",
                    "path": "<HID::Twin USB Gamepad      >/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44c11d83-85f0-481e-812f-1e73c4401bb2",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15d405bb-ac8e-4576-9762-7b5625a0bd05",
                    "path": "<HID::Twin USB Gamepad      >/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09a1887e-6eb0-4e9d-a607-b0534a04b5ec",
                    "path": "<HID::Twin USB Gamepad      >/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80392ebf-5cf2-4d90-a7b2-5a31f4b39472",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0441f4e-1790-44df-85df-b00f7959787d",
                    "path": "<HID::Twin USB Gamepad      >/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0741faa-2f14-4924-9383-c973f54e43fd",
                    "path": "<HID::Twin USB Gamepad      >/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a228003-361f-4732-9e02-ab0ecc59ac22",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e66a26c6-a7b1-4c29-bc43-8b9b18c579a3",
                    "path": "<HID::Twin USB Gamepad      >/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1146f2be-79d1-4feb-a6c6-77d0c9a249cd",
                    "path": "<HID::Twin USB Gamepad      >/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4baaf01d-51b1-402c-b854-17a2d51d22c1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}